New branch, initial commit. Added new class Model and new Notebook main_edit to test restructured versions of FirmInvestmentModel, model_solve and model_sim. Not yet finished and ready to run.

--- a/student_project.ipynb
+++ b/student_project.ipynb
@@ -373,15 +373,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "13f8d132",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[0.13112528 0.07197835]\n"
+      "c:\\Users\\alexa\\Documents\\Bonn\\Uni\\BGSE\\Studies\\OSE\\project\\ose-scientific-computing-course-default101\\auxiliary\\helpers_calcmoments.py:23: FutureWarning: In a future version of pandas all arguments of DataFrame.drop except for the argument 'labels' will be keyword-only\n",
+      "  data.drop(data.columns.difference(to_keep), 1, inplace=True)\n"
      ]
     }
    ],
@@ -393,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "id": "6b31b69a",
    "metadata": {},
    "outputs": [
@@ -1041,7 +1042,7 @@
        "39    0.805459           0.203139      0.068181  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
