--- a/main_edit.ipynb
+++ b/main_edit.ipynb
@@ -30,7 +30,7 @@
     "\n",
     "approx_param = {\n",
     "    \"max_iter\" : 1000, \n",
-    "    \"precision\" : 1e-7, \n",
+    "    \"precision\" : 1e-5, \n",
     "    \"size_capital_grid\" : 11, \n",
     "}"
    ]
@@ -50,46 +50,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "a = model._create_capital_grid(0.5,0.05, 5)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "b, c = a[0][[0,2]]\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "20.29112160566703"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "b"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "a = (6*\n",
-    "    7)**5"
+    "model.visualize_model_sol"
    ]
   },
   {
